--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
       <h1>Calculator</h1>
       <form id="add">
+        <h4>Addition</h4>
         <div class="form-group">
           <label for="add1">1st Number:</label>
           <input id="add1" class="form-control" type="text">
@@ -23,7 +24,39 @@
       </form>
       <div id="output">
 
+      </div>
+      <form id="Sub">
+        <h4>Subraction</h4>
+        <div class="form-group">
+          <label for="sub1">1st Number:</label>
+          <input id="sub1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="sub2">2nd Number:</label>
+          <input id="sub2" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn"> Subtract!</button>
+      </form>
+      <div id="subout">
+
+      </div>
+
+      <form id="multi">
+        <h4>Multiplcation</h4>
+        <div class="form-group">
+          <label for="multi1">1st Number:</label>
+          <input id="multi1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="multi2">2nd Number</label>
+          <input id="multi2" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn">Multiply!</button>
+      </form>
+      <div id="multiout">
+
       </div>  
-   </div>
+
+    </div>
   </body>
 </html>
