add division button and function

--- a/index.html
+++ b/index.html
@@ -55,7 +55,22 @@
       </form>
       <div id="multiout">
 
-      </div>  
+      </div>
+      <form id="divide">
+        <h4>Division</h4>
+        <div class="form-group">
+          <label for="div1">1st Number:</label>
+          <input id="div1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="div2">2nd Number</label>
+          <input id="div2" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn">Divide!</button>
+      </form>
+      <div id="divout">
+
+      </div>
 
     </div>
   </body>
